PROJECT(Base64Example CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_CXX_STANDARD 11)

STRING(TOLOWER ${CMAKE_PROJECT_NAME} BINARY)

ADD_EXECUTABLE(${BINARY})
TARGET_SOURCES(${BINARY} PRIVATE src/main.cpp)
TARGET_INCLUDE_DIRECTORIES(${BINARY} PRIVATE ${PROJECT_SOURCE_DIR}/lib/base-64/include)
TARGET_LINK_LIBRARIES(${BINARY} Base64_encode_lib Base64_encode_lib)
