PROJECT(Base64Example CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_CXX_STANDARD 11)

SET(BINARY base64_example)

ADD_EXECUTABLE(${BINARY})
TARGET_SOURCES(${BINARY} PRIVATE src/main.cpp)
TARGET_INCLUDE_DIRECTORIES(${BINARY} PRIVATE ${PROJECT_SOURCE_DIR}/lib/base64-cpp/include)
TARGET_LINK_LIBRARIES(${BINARY} base64_encode_lib base64_decode_lib)

ADD_SUBDIRECTORY(lib/base64-cpp)